--- a/package.json
+++ b/package.json
@@ -1,24 +1,38 @@
 {
   "name": "sudokio_algorithms",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "author": {
+    "name": "Jeff Rose",
+    "email": "jtr219@outlook.com"
+  },
   "license": "MIT",
+  "keywords": [
+    "sudoku"
+  ],
   "dependencies": {
-    "chai": "^4.2.0",
-    "chalk": "^4.0.0",
-    "esm": "^3.2.25",
-    "jest": "^26.0.1",
-    "jest-esm-transformer": "^1.0.0",
-    "prompt": "^1.0.0",
     "ramda": "^0.27.0"
   },
   "scripts": {
-    "start": "node -r esm app.js",
-    "test": "jest"
+    "tsc": "tsc",
+    "test": "jest",
+    "prepublishOnly": "tsc -d"
   },
   "jest": {
     "transform": {
       ".js": "jest-esm-transformer"
     }
+  },
+  "devDependencies": {
+    "@types/chai": "^4.2.15",
+    "@types/jest": "^26.0.22",
+    "@types/ramda": "^0.27.39",
+    "chai": "^4.2.0",
+    "esm": "^3.2.25",
+    "jest": "^26.0.1",
+    "jest-esm-transformer": "^1.0.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   }
 }
