--- a/package.json
+++ b/package.json
@@ -19,11 +19,6 @@
     "test": "jest",
     "prepublishOnly": "tsc -d"
   },
-  "jest": {
-    "transform": {
-      ".js": "jest-esm-transformer"
-    }
-  },
   "devDependencies": {
     "@types/chai": "^4.2.15",
     "@types/jest": "^26.0.22",
@@ -32,6 +27,7 @@
     "esm": "^3.2.25",
     "jest": "^26.0.1",
     "jest-esm-transformer": "^1.0.0",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
